--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <string name="app_name">keysocTest</string>
+    <string name="search_hint">Search songs, albums or artists</string>
+    <string name="search">Search</string>
 </resources>
