--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">keysocTest</string>
     <string name="search_hint">Search songs, albums or artists</string>
     <string name="search">Search</string>
+    <string name="error_empty_edit_text">Please Enter Keyword to search</string>
 </resources>
