--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="search_hint">Search songs, albums or artists</string>
     <string name="search">Search</string>
     <string name="error_empty_edit_text">Please Enter Keyword to search</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_favourite">Favourite</string>
+    <string name="menu_language">Language</string>
+    <string name="text_filter_country">Country:</string>
+    <string name="text_filter_media_type">Media Type:</string>
 </resources>
