--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">keysocTest</string>
-    <string name="search_hint">Search songs, albums or artists</string>
-    <string name="search">Search</string>
-    <string name="error_empty_edit_text">Please Enter Keyword to search</string>
+    <string name="search_hint">搜寻歌曲、专辑或艺术家</string>
+    <string name="search">搜寻</string>
+    <string name="error_empty_edit_text">请输入关键字进行搜寻</string>
+    <string name="text_filter_country">国家:</string>
+    <string name="text_filter_media_type">媒体类型:</string>
+    <string name="text_choose_language">选择语言</string>
+    <string name="text_traditional_chinese">繁体中文</string>
+    <string name="text_simplified_chinese">简体中文</string>
+    <string name="english">英文</string>
 </resources>
