[F-0006] Favourite local storage -Setup SharePreferenceUtils for local data storage -Allow add or delete song in favourite -Add activity for stored favourite list

--- a/app/src/main/res/values-zh-rHK/strings.xml
+++ b/app/src/main/res/values-zh-rHK/strings.xml
@@ -10,4 +10,5 @@
     <string name="text_traditional_chinese">繁體中文</string>
     <string name="text_simplified_chinese">簡體中文</string>
     <string name="english">英文</string>
+    <string name="text_favourites">收藏夾</string>
 </resources>
