--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -10,4 +10,5 @@
     <string name="text_traditional_chinese">繁体中文</string>
     <string name="text_simplified_chinese">简体中文</string>
     <string name="english">英文</string>
+    <string name="text_favourites">收藏夹</string>
 </resources>
