--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="text_traditional_chinese">Traditional Chinese</string>
     <string name="text_simplified_chinese">Simplified Chinese</string>
     <string name="english">English</string>
+    <string name="text_favourites">Favourites</string>
 </resources>
